--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -34,7 +34,7 @@
 
         <div class="row">
             <div class="input-field col s12 m6 l3"><i class="material-icons prefix">restaurant</i>
-                <select multiple id="meals_courses" name="meal_course_type">
+                <select id="meals_courses" name="meal_course_type">
                     <option value="" disabled selected>Mealtimes & Courses</option>
                 {% for meals in meals_courses %}
                     <option value="{{meals.meal_course_type}}">{{meals.meal_course_type}}</option>
