--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 <nav>
                     <div class="nav-wrapper grey darken-2">
                         <div class="container">
-                            <a href="#!" class="brand-logo"><span class="yellow-text text-darken-1">Deee</span>lish<span class="yellow-text text-darken-1">!<span></a>
+                            <a href="{{url_for('index')}}" class="brand-logo"><span class="yellow-text text-darken-1">Deee</span>lish<span class="yellow-text text-darken-1">!<span></a>
                             <a href="#" data-activates="mobile-demo"
                                 class="button-collapse"><i class="material-icons">menu</i></a>
                             <ul class="right hide-on-med-and-down">
