remove container from base.html and add container to each template

--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 <h3 class="page-head">Add Category</h3>
 
 <h5>Meals and Courses</h5>
@@ -43,6 +44,7 @@
 				class="btn waves-effect waves-light">Cancel<i class="material-icons right">cancel</i></a>
 		</div>
 	</form>
+</div>
 </div>
 
 {% endblock %}
