--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 <h3 class="page-head">Add Recipe</h3>
 
 <div class="row">
@@ -8,11 +9,9 @@
 
 		<div class="row">
 			<div class="input-field col s1"><i class="material-icons">add_photo_alternate</i></div>
-			<div class="file-field input-field img-icon col s11 m6 l8">
+			<div class="file-field input-field img-icon col s11">
 				<div class="file-path-wrapper img-path"><input class="file-path validate" type="text" placeholder="Add photograph"></div>
-            </div>
-            <div class="file-field input-field col s12 m5 l3">
-				<div class="btn btn-img right"><span>Select Image</span><input type="file" name="file" id="image"></div>
+                <div class="btn btn-img right"><span>Select Image</span><input type="file" name="file" id="image"></div>
             </div>
 		</div>
 
@@ -117,6 +116,7 @@
         </div>
 
 	</form>
+</div>
 </div>
 
 {% endblock %}
