--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 <h3 class="page-head">Categories</h3>
 
 <div class="row add-cat-row">
@@ -58,6 +59,7 @@
 			{% endfor %}
 		</ul>
 	</div>
+</div>
 </div>
 
 {% endblock %}
