--- a/templates/editmealcat.html
+++ b/templates/editmealcat.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<div class="container">
 <h3 class="page-head">Edit Category</h3>
 
 <h5>Meals and Courses</h5>
@@ -27,6 +28,7 @@
 		</div>
 
 	</form>
+</div>
 </div>
 
 {% endblock %}
