--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row container">
         <div class="col s12 m6 search-col">
-            <div class="card welcome-card grey lighten-5">
+            <div class="card welcome-card hoverable grey lighten-5">
                 <div class="card-content grey-text text-darken-2">
                     <span class="card-title">
                         <a href="{{ url_for('get_recipes') }}"><i class="material-icons prefix">search</i><p class="card-text">Search our recipes</p></a>
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="col s12 m6 share-col">
-            <div class="card welcome-card grey lighten-5">
+            <div class="card welcome-card hoverable grey lighten-5">
                 <div class="card-content grey-text text-darken-2">
                     <span class="card-title">
                         <a href="{{url_for('add_recipe')}}"><i class="material-icons prefix">share</i><p class="card-text">Share your recipes</p></a>
@@ -44,7 +44,9 @@
         <div class="row">
             <div class="carousel">
                 <a class="carousel-item"
-                    href="{{url_for('view_recipe', recipe_id='5e7f6ba62c2a25ef5bf9903f')}}"><img src="{{ url_for('static', filename='images/uploads/HotCrossBuns.jpg') }}"></a>
+                    <div class="video-container">
+                        <iframe width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
+                    </div></a>
                     <a class="carousel-item"
                         href="{{url_for('view_recipe', recipe_id='5e7f7128c814a57c303ee2f0')}}"><img src="{{ url_for('static', filename='images/uploads/MarbledEgg.jpg') }}"></a>
                         <a class="carousel-item"
