fix bug with carousel on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,7 @@
         <div class="row">
             <div class="carousel">
                 <a class="carousel-item"
-                    <div class="video-container">
-                        <iframe width="853" height="480" src="" frameborder="0" allowfullscreen></iframe>
-                    </div></a>
+						href="{{url_for('view_recipe', recipe_id='5e7f6ba62c2a25ef5bf9903f')}}"><img src="{{ url_for('static', filename='images/uploads/HotCrossBuns.jpg') }}"></a>
                     <a class="carousel-item"
                         href="{{url_for('view_recipe', recipe_id='5e7f7128c814a57c303ee2f0')}}"><img src="{{ url_for('static', filename='images/uploads/MarbledEgg.jpg') }}"></a>
                         <a class="carousel-item"
