--- a/templates/tips.html
+++ b/templates/tips.html
@@ -51,34 +51,40 @@
 	</div>
 	<div class="parallax-container">
 		<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></div>
-		</div>
-		<div class="section white">
-			<div class="row container">
-				<h2 class="header">Techniques</h2>
-				<p class="welcome-para grey-text text-darken-2 lighten-3">Want to improve your cookery skills or expand
-					your kitchen know-how? From filleting fish to creating the perfect puffed up soufflé, storing and
-					freezing foods to using a slow cooker, this section is the place to find all the step-by-step guides
-					and videos you'll need.</p>
-				<div class="row">
-					<div class="carousel">
-						<a class="carousel-item"
-							href="{{url_for('view_recipe', recipe_id='5e7f6ba62c2a25ef5bf9903f')}}"><img src="{{ url_for('static', filename='images/uploads/HotCrossBuns.jpg') }}"></a>
-							<a class="carousel-item"
-								href="{{url_for('view_recipe', recipe_id='5e7f7128c814a57c303ee2f0')}}"><img src="{{ url_for('static', filename='images/uploads/MarbledEgg.jpg') }}"></a>
-								<a class="carousel-item"
-									href="{{url_for('view_recipe', recipe_id='5e7f74ebc814a57c303ee2f2')}}"><img src="{{ url_for('static', filename='images/uploads/healthy-easter-lamb.jpg') }}"></a>
-									<a class="carousel-item"
-										href="{{url_for('view_recipe', recipe_id='5e7f76dac814a57c303ee2f4')}}"><img src="{{ url_for('static', filename='images/uploads/easter-nest-cake.jpg') }}"></a>
-										<a class="carousel-item"
-											href="{{url_for('view_recipe', recipe_id='5e7fba6ee13678197962ff96')}}"><img src="{{ url_for('static', filename='images/uploads/simnel-cake.jpg') }}"></a>
-											<a class="carousel-item"
-												href="{{url_for('view_recipe', recipe_id='5e7fc1dde13678197962ff98')}}"><img src="{{ url_for('static', filename='images/uploads/easter-egg-rocky-road.jpg') }}"></a>
-												<a class="carousel-item"
-													href="{{url_for('view_recipe', recipe_id='5e8073b7fe17ddf4e49f3f07')}}"><img src="{{ url_for('static', filename='images/uploads/iced-easter-biscuits.jpg') }}"></a>
-					</div>
-				</div>
-			</div>
-		</div>
+	</div>
+    <div class="section white">
+        <div class="row container">
+            <h2 class="header">Techniques</h2>
+            <p class="welcome-para grey-text text-darken-2 lighten-3">Want to improve your cookery skills or expand
+                your kitchen know-how? From filleting fish to creating the perfect puffed up soufflé, storing and
+                freezing foods to using a slow cooker, this section is the place to find all the step-by-step guides
+                and videos you'll need.</p>
+            <div class="row tech-row">
+                <div class="col s12 m6 tech-col">
+                    <div class="video-container">
+                        <iframe width="853" height="480" src="//www.youtube.com/embed/i-yfCEVQ3DI" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col s12 m6 tech-col">
+                    <div class="video-container">
+                        <iframe width="853" height="480" src="//www.youtube.com/embed/iHGO8ygUk0w" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="row tech-row">
+                <div class="col s12 m6 tech-col">
+                    <div class="video-container">
+                        <iframe width="853" height="480" src="//www.youtube.com/embed/uXSgGtMkgro" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col s12 m6 tech-col">
+                    <div class="video-container">
+                        <iframe width="853" height="480" src="//www.youtube.com/embed/8O_-HD2P9pc" frameborder="0" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 		<div class="parallax-container">
 			<div class="parallax">
 				<img src="{{ url_for('static', filename='images/uploads/Crispy-Falafel.jpg') }}"></div>
