--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,12 @@ body {
 
 /*------------Index Page-----------*/
 
+@media (max-width: 600px) {
+    .parallax-container {
+        height: 350px;
+    }
+}
+
 .parallax-container {
     width: 100%;
 }
@@ -30,12 +36,13 @@ body {
     font-size: 1.5rem;
 }
 
-.search-col {
-    padding-left: 0px !important;
-}
-
-.share-col {
-    padding-right: 0px !important;
+@media (min-width: 601px) {
+    .search-col {
+        padding-left: 0px !important;
+    }
+    .share-col {
+        padding-right: 0px !important;
+    }
 }
 
 .welcome-card {
