change ingredients and method input field for textarea

--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -92,7 +92,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">add_shopping_cart</i>
-                <input id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea">
+                <textarea id="add_ingredients" name="add_ingredients" type="text" class="materialize-textarea"></textarea>
                 <label for="add_ingredients">Ingredients</label>
             </div>
         </div>
@@ -100,7 +100,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">list</i>
-                <input id="method" name="method" type="text" class="materialize-textarea">
+                <textarea id="method" name="method" type="text" class="materialize-textarea"></textarea>
                 <label for="method">Method</label>
             </div>
         </div>
