--- a/templates/viewrecipe.html
+++ b/templates/viewrecipe.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container">
-<h3 class="page-head">{{recipe.recipe_name}}</h3>
+<h3 class="page-head">{{recipe.recipe_name.title()}}</h3>
 
 <div class="row">
 	<div class="col s12 m4 l3">
