--- a/templates/categories.html
+++ b/templates/categories.html
@@ -20,15 +20,16 @@
 			<li>
 				<div class="collapsible-header">
 					<div class="col s11">
-						<strong>{{meal.meal_course_type}}</strong>
+						<strong>{{meal.meal_course_type.title()}}</strong>
 					</div>
                 <div class="col s1"><i class="material-icons yellow-text text-darken-1">expand_more</i></div>
                 </div>
                 <div class="collapsible-body">
-                <div class="row">
-                    <div class="col s12">
-                        <a href="{{url_for('delete_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
-                        <a href="{{url_for('edit_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                    <div class="row">
+                        <div class="col s12">
+                            <a href="{{url_for('delete_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
+                            <a href="{{url_for('edit_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                        </div>
                     </div>
                 </div>
 			</li>
@@ -44,15 +45,16 @@
 			<li>
 				<div class="collapsible-header">
 					<div class="col s11">
-						<strong>{{cuis.cuisine}}</strong>
+						<strong>{{cuis.cuisine.title()}}</strong>
                     </div>
                     <div class="col s1"><i class="material-icons yellow-text text-darken-1">expand_more</i></div>
                 </div>
-                    <div class="collapsible-body">
-                <div class="row">
-                    <div class="col s12">
-                        <a href="{{url_for('delete_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
-                        <a href="{{url_for('edit_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                <div class="collapsible-body">
+                    <div class="row">
+                        <div class="col s12">
+                            <a href="{{url_for('delete_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
+                            <a href="{{url_for('edit_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                        </div>
                     </div>
                 </div>
 			</li>
