--- a/templates/viewrecipe.html
+++ b/templates/viewrecipe.html
@@ -6,12 +6,9 @@
 
 <div class="row">
 	<div class="col s12 m4 l3">
-        <div class="card-panel">
-            <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="{{ url_for('static', filename='images/uploads/') }}">
-                <span class="sr-only">Recipe Image</span>
-            </div>
-        </div> 
+        
+        <img class="responsive-img" src="{{recipe.add_photo}}" height="100%">
+    
     </div>
 
 	<div class="col s12 m8 l9">
