--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,11 @@ textarea.materialize-textarea:focus {
     height: 207.3px;
 }
 
+img {
+    width: 100%;
+    
+}
+
 .recipe_description {
     margin: 0px 0px 30px 0px;
     font-size: 20px;
