--- a/templates/editrecipe.html
+++ b/templates/editrecipe.html
@@ -7,14 +7,10 @@
 	<form action="{{ url_for('update_recipe', recipe_id=recipe._id) }}" method="POST" class="col s12 edit-recipe-form" enctype="multipart/form-data">
 
 		<div class="row">
-			<div class="input-field col s9">
+			<div class="input-field col s12">
                 <i class="material-icons prefix">add_photo_alternate</i>
-                <label for="icon_prefix">Paste image URL here</label>
+                <label for="icon_prefix">Paste Image URL here</label>
                 <input id="add_photo" name="add_photo" type="text" class="validate" value="{{recipe.add_photo}}">
-            </div>
-            <div class="input-field col s3">
-                <a target="_blank" href="https://pasteboard.co/"
-                    class="btn waves-effect waves-light right">Select Image<i class="material-icons right">cancel</i></a>
             </div>
 		</div>
 
