add href linking recipe to image in parallax container in tips.html

--- a/templates/tips.html
+++ b/templates/tips.html
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<div class="parallax-container">
-		<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></div>
+		<div class=""><a href="{{url_for('view_recipe', recipe_id='5e837bddf79441c405d6832c')}}"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></a></div>
 	</div>
     <div class="section white">
         <div class="row container">
@@ -87,7 +87,7 @@
     </div>
 		<div class="parallax-container">
 			<div class="parallax">
-				<img src="{{ url_for('static', filename='images/uploads/crispy-falafel.jpg') }}"></div>
+				<img src="{{ url_for('static', filename='images/uploads/crispy-falafel.jpg') }}"><</div>
 			</div>
 
 			<!-- Modal Structure -->
