--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,9 +22,9 @@ body {
 
 /*------------Index Page-----------*/
 
-@media (max-width: 600px) {
+@media only screen and (max-width: 600px) {
     .parallax-container {
-        height: 350px;
+        height: 130px;
     }
 }
 
