--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     </div>
 </div>
 <div class="parallax-container">
-    <div class=""><a href="{{url_for('view_recipe', recipe_id='5e836d6222047d8929a64995')}}"><img src="{{ url_for('static', filename='images/uploads/banana-bread.jpg') }}"></a></div>
+    <div class="parallax"><img src="{{ url_for('static', filename='images/uploads/banana-bread.jpg') }}"></div>
 </div>
 <div class="section white">
     <div class="row container">
@@ -62,7 +62,7 @@
     </div>
 </div>
 <div class="parallax-container">
-    <div class=""><a href="{{url_for('view_recipe', recipe_id='5e83d215d9da7947b62f70c4')}}"><img src="{{ url_for('static', filename='images/uploads/meringue-next-cheesecake.jpg') }}"></a></div>
+    <div class="parallax"><img src="{{ url_for('static', filename='images/uploads/meringue-next-cheesecake.jpg') }}"></div>
 </div>
 
 		{% endblock %}
