--- a/templates/tips.html
+++ b/templates/tips.html
@@ -50,7 +50,7 @@
 		</div>
 	</div>
 	<div class="parallax-container">
-		<div class=""><a href="{{url_for('view_recipe', recipe_id='5e837bddf79441c405d6832c')}}"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></a></div>
+		<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/chicken-tikka-pizzas.jpg') }}"></div>
 	</div>
     <div class="section white">
         <div class="row container">
