apply style edits

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 
 
 <div class="parallax-container">
-	<div id="cover-image" class="parallax"><img src="{{ url_for('static', filename='images/uploads/deeelish-cover.jpg') }}"></div>
+	<div class="parallax"><img src="{{ url_for('static', filename='images/uploads/deeelish-cover.jpg') }}"></div>
 </div>
 <div class="section white">
     <div class="row container">
