--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,7 +28,14 @@ body {
     }
 }
 
-@media (min-width: 576px) and (max-width: 991.98px) {
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .parallax-container {
+        height: 300px;
+        width: 100%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
     .parallax-container {
         height: 350px;
         width: 100%;
