remove responsive-table class on roast timings and add home link on side-nav

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,7 @@
                 </nav>
             </div>
             <ul class="side-nav" id="mobile-demo">
+                <li><a href="{{url_for('index')}}">Home</a></li>
                 <li><a href="{{url_for('get_recipes')}}">Discover Recipes</a></li>
                 <li><a href="{{url_for('add_recipe')}}">Add Recipe</a></li>
                 <li><a href="{{url_for('get_categories')}}">Browse Categories</a></li>
