--- a/templates/tips.html
+++ b/templates/tips.html
@@ -215,7 +215,7 @@
 						most accurate time.</p>
 					<h5>Checking it's ready</h5>
 					<p>The best way to check if your meat is cooked is by using a digital cooking thermometer.</p>
-						<table class="striped responsive-table">
+						<table class="striped">
 							<thead>
 								<tr>
 									<th>Beef, lamb and venison</th>
