--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,6 +237,12 @@ input.valid:not([type]), input.valid:not([type]):focus, input[type=text].valid:n
     box-shadow: 0 1px 0 0 #b2b2b2;
 }
 
+input.invalid:not([type]), input.invalid:not([type]):focus, input[type=text].invalid:not(.browser-default), input[type=text].invalid:not(.browser-default):focus, input[type=password].invalid:not(.browser-default), input[type=password].invalid:not(.browser-default):focus, input[type=email].invalid:not(.browser-default), input[type=email].invalid:not(.browser-default):focus, input[type=url].invalid:not(.browser-default), input[type=url].invalid:not(.browser-default):focus, input[type=time].invalid:not(.browser-default), input[type=time].invalid:not(.browser-default):focus, input[type=date].invalid:not(.browser-default), input[type=date].invalid:not(.browser-default):focus, input[type=datetime].invalid:not(.browser-default), input[type=datetime].invalid:not(.browser-default):focus, input[type=datetime-local].invalid:not(.browser-default), input[type=datetime-local].invalid:not(.browser-default):focus, input[type=tel].invalid:not(.browser-default), input[type=tel].invalid:not(.browser-default):focus, input[type=number].invalid:not(.browser-default), input[type=number].invalid:not(.browser-default):focus, input[type=search].invalid:not(.browser-default), input[type=search].invalid:not(.browser-default):focus, textarea.materialize-textarea.invalid, textarea.materialize-textarea.invalid:focus, .select-wrapper.invalid>input.select-dropdown {
+    border-bottom: 1px solid #fdd835;
+    -webkit-box-shadow: 0 1px 0 0 #fdd835;
+    box-shadow: 0 1px 0 0 #fdd835;
+}
+
 textarea.materialize-textarea {
     overflow-y: scroll;
     border-bottom: 1px #b2b2b2 !important;
