--- a/templates/addrecipe.html
+++ b/templates/addrecipe.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">subject</i>
-                <input id="recipe_description" name="recipe_description" type="text" class="materialize-textarea" required>
+                <input id="recipe_description" name="recipe_description" type="text" class="materialize-textarea validate" required>
                 <label for="icon_telephone">Recipe Description</label>
             </div>
         </div>
@@ -49,11 +49,11 @@
                 </select>
             </div>
             <div class="input-field col s12 m6 l3"><i class="material-icons prefix">people_outline</i>
-                <input id="serves" name="serves" type="number" class="materialize-textarea" required>
+                <input id="serves" name="serves" type="number" class="materialize-textarea validate" required>
                 <label for="serves">Serves</label>
             </div>
             <div class="input-field col s12 m6 l3"><i class="material-icons prefix">access_time</i>
-                <input id="time" name="time" type="text" class="materialize-textarea" required>
+                <input id="time" name="time" type="text" class="materialize-textarea validate" required>
                 <label for="time">Total Time</label>
             </div>
         </div>
