edit text on roast timing model

--- a/templates/tips.html
+++ b/templates/tips.html
@@ -218,9 +218,9 @@
 						<table class="striped">
 							<thead>
 								<tr>
-									<th>Beef, lamb and venison</th>
+									<th>Beef, lamb & venison</th>
 									<th>Pork</th>
-									<th>Poultry (chicken, turkey, goose and duck)</th>
+									<th>Poultry</th>
 								</tr>
 							</thead>
 
