--- a/templates/base.html
+++ b/templates/base.html
@@ -73,13 +73,13 @@
 				<div class="col m4 offset-m2 s12">
 					<h5 class="white-text">Social</h5>
 					<ul class="social-links">
-						<li><a class="yellow-text text-darken-1" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
+						<li><a target="_blank" class="yellow-text text-darken-1" href="https://www.facebook.com"><i class="fab fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span></a></li>
-						<li><a class="yellow-text text-darken-1" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
+						<li><a target="_blank" class="yellow-text text-darken-1" href="https://twitter.com/?lang=en-gb"><i class="fab fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span></a></li>
-						<li><a class="yellow-text text-darken-1" href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
+						<li><a target="_blank" class="yellow-text text-darken-1" href="https://www.instagram.com"><i class="fab fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span></a></li>
-						<li><a class="yellow-text text-darken-1" href="https://www.pinterest.co.uk"><i class="fab fa-pinterest" aria-hidden="true"></i>
+						<li><a target="_blank" class="yellow-text text-darken-1" href="https://www.pinterest.co.uk"><i class="fab fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span></a></li>
 					</ul>
 				</div>
