--- a/static/css/style.css
+++ b/static/css/style.css
@@ -285,12 +285,13 @@ img {
     margin-bottom: 40px;
 }
 
-.cat-meals {
-    margin-right: 20px;
-}
-
-.cat-cuis {
-    margin-left: 20px;
+@media (min-width: 601px) {
+    .cat-meals {
+        margin-right: 20px;
+    }
+    .cat-cuis {
+        margin-left: 20px;
+    }
 }
 
 .cat-header {
