added and styled flash messages for user feedback

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,16 @@ body {
     letter-spacing: 1px;
 }
 
+/*------------Flash Messages-----------*/
+
+.flash-msgs {
+    height: 70px !important;
+}
+
+.flash-message {
+    font-size: 1.3rem;
+}
+
 /*------------Index Page-----------*/
 
 @media (max-width: 575.98px) {
