Make category lowercase for saving in database

--- a/templates/editcuisinecat.html
+++ b/templates/editcuisinecat.html
@@ -12,7 +12,7 @@
 		<div class="row edit-cat-row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">fastfood</i>
-				<input id="cuisine" name="cuisine" type="text" class="validate" value="{{cuis.cuisine}}">
+				<input id="cuisine" name="cuisine" type="text" class="validate" value="{{cuis.cuisine.title()}}">
 				<label for="icon_prefix">Category Name</label>
 			</div>
 		</div>
