--- a/templates/editmealcat.html
+++ b/templates/editmealcat.html
@@ -12,7 +12,7 @@
 		<div class="row edit-cat-row">
 			<div class="input-field col s12">
 				<i class="material-icons prefix">restaurant</i>
-				<input id="meal_course_type" name="meal_course_type" type="text" class="validate" value="{{meal.meal_course_type}}">
+				<input id="meal_course_type" name="meal_course_type" type="text" class="validate" value="{{meal.meal_course_type.title()}}">
 				<label for="meal_name">Category Name</label>
 			</div>
 		</div>
